# clp

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md  make_all_and_run_tests.sh
docs/: documentation.md  implementation.md
docs/refactoring1/src/: validator.uxf
docs/src/: class-hierarchy.uxf  class-interfaces.uxf  classes.uxf  clp-classes.uxf  native-parser-state-machine.uxf  top-level-principle.uxf
examples/: builtin-commands.cpp  helloworld-1.cpp  helloworld-2.cpp  helloworld.cpp  inspector.cpp
features/: first.feature
features/step_definitions/: first.cpp
header/elrat/: clp.hpp
header/elrat/clp/: clp.hpp  command.hpp  commandline.hpp  commandmap.hpp  descriptors.hpp  errorhandling.hpp  nativeparser.hpp  parser.hpp  parserwrapper.hpp  processor.hpp
inc/: descriptors.hpp  errorhandling.hpp  modifiablecommandline.hpp  parser.hpp  regex.hpp
inc/elrat/: clp.h  clp.hpp
inc/elrat/clp/: cmd.hpp  common.hpp  context.hpp  data.hpp  desc.hpp  descriptors.hpp  input.hpp  input_interface.hpp  new_header_template.txt  parser.hpp  parser_interface.hpp  proc.hpp  regex.hpp  text.hpp  util.hpp
include/: builtin.hpp  commandwrapper.hpp  parser.hpp  regex.hpp  tokenhandler.hpp
source/: builtin.cpp  commandline.cpp  commandmap.cpp  descriptors.cpp  errorhandling.cpp  nativeparser.cpp  parser.cpp  processor.cpp  regex.cpp  tokenhandler.cpp
source/common/: commandline.cpp  regex.hpp
source/parser/: parser.cpp
source/parser/nativeparser/: tokenhandler.cpp
source/processor/: builtin.cpp  commandwrapper.cpp  processor.cpp
src/: CMakeLists.txt  clp.cpp  cmd.cpp  commandline.cpp  commands.cpp  common.cpp  context.cpp  convert.cpp  data.cpp  desc.cpp  descriptors.cpp  errorhandling.cpp  example.cpp  input.cpp  inspect_cmdstr.cpp  ostream.cpp  parser.cpp  proc.cpp  processor.cpp  regex.cpp  test.cpp  text.cpp  util.cpp
src/examples/: helloworld.cpp  inspector.cpp
src/header/elrat/: clp.hpp
src/header/elrat/clp/: convert.hpp
src/source/common/: regex.cpp
src/source/descriptors/: descriptors.cpp
src/source/parser/: parserwrapper.cpp
src/source/processor/: builtin.hpp  command.cpp  commandmap.cpp  commandwrapper.hpp
src/test/: desc_t.cpp  main_t.cpp  old_test.cpp  parser_t.cpp  parser_test.cpp  unittest.cpp
src/test/descriptors-unittest/: utility.cpp  utility.hpp
src/test/parser-unittest/: nativeparser.cpp
src/test/processor-unittest/: inputdata.hpp  testsuites.cpp  utility.cpp  utility.hpp
src/tests/: test1-lowlevel.cpp  test2-component.cpp
src/tests/class-level-test/: clt-data.cpp  clt-desc.cpp  clt-main.cpp  clt-util.cpp  desc-clt.cpp  parser-clt.cpp  util-clt.cpp
src/tests/component-test/: ct-main.cpp
src/tools/: inspector.cpp  regex.cpp
test/descriptors-unittest/: inputdata.cpp  inputdata.hpp  testsuites.cpp
test/processor-unittest/: inputdata.cpp  testsuites.cpp  utility.cpp  utility.hpp
tests/: clp_test.cpp  clp_test_input.cpp  clp_test_input.hpp  clp_test_util.cpp  clp_test_util.hpp  descriptors_t.cpp  descriptors_t_input.cpp  descriptors_t_input.hpp  descriptors_t_util.cpp  descriptors_t_util.hpp  parser_t.cpp  test-template.cpp
tests/descriptors-test/: input.cpp  input.hpp  test.cpp  util.cpp  util.hpp
tests/parser-test/: test.cpp
tests/processor-test/: input.cpp  test.cpp  util.cpp  util.hpp
tools/: inspector.cpp
